force-app/main/default/objects/WorkOrderLineItem/fields/Acorn_SBID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SBID__c</fullName>
    <formula>Asset.Acorn_SBID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn SBID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>