force-app/main/default/objects/WorkOrderLineItem/fields/Acorn_SCOD__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SCOD__c</fullName>
    <formula>Asset.Acorn_SCOD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn SCOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>