force-app/main/default/objects/WorkOrderLineItem/fields/Acorn_WOC__c.field-meta.xml
<CustomField>
    <fullName>Acorn_WOC__c</fullName>
    <label>Acorn WOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>