force-app/main/default/objects/WorkOrderLineItem/fields/Asset_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Service_Type__c</fullName>
    <description>Get Asset Type Information</description>
    <label>Asset Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>