force-app/main/default/objects/WorkOrderLineItem/fields/Cost_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model_Type__c</fullName>
    <formula>TEXT( Asset.Cost_Model_Type__c)</formula>
    <label>Cost Model Type</label>
    <type>Text</type>
</CustomField>