force-app/main/default/objects/WorkOrderLineItem/fields/Cost_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Cost_Total_Tax__c</fullName>
    <formula>Asset.Cost_Total_Tax__c</formula>
    <label>Cost Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>