force-app/main/default/objects/WorkOrderLineItem/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT( Asset.Duration__c )</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>