force-app/main/default/objects/WorkOrderLineItem/fields/Event_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Event_Tonnage__c</fullName>
    <label>W/O Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>