force-app/main/default/objects/WorkOrderLineItem/fields/Is_Quantity_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Is_Quantity_Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quantity Estimated</label>
    <type>Checkbox</type>
</CustomField>