force-app/main/default/objects/WorkOrderLineItem/fields/Is_Rebate_Pricing_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Rebate_Pricing_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rebate Pricing Needed</label>
    <type>Checkbox</type>
</CustomField>