force-app/main/default/objects/WorkOrderLineItem/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>