force-app/main/default/objects/WorkOrderLineItem/fields/Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Type__c</fullName>
    <formula>TEXT(Asset.Occurrence_Type__c)</formula>
    <label>Occurrence Type</label>
    <type>Text</type>
</CustomField>