force-app/main/default/objects/WorkOrderLineItem/fields/Original_Client_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Client_Price__c</fullName>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>