force-app/main/default/objects/WorkOrderLineItem/fields/PSI_Reading__c.field-meta.xml
<CustomField>
    <fullName>PSI_Reading__c</fullName>
    <label>PSI Reading</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>