force-app/main/default/objects/WorkOrderLineItem/fields/Quantity_Source__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Source__c</fullName>
    <label>Quantity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weight Tkt</fullName>
            </value>
            <value>
                <fullName>Vendor Doc</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>EDI Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>eBusiness</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>FTP Upload</fullName>
            </value>
            <value>
                <fullName>Tonnage Fax</fullName>
            </value>
            <value>
                <fullName>MAS Tonnage</fullName>
            </value>
            <value>
                <fullName>ISV Tonnage</fullName>
            </value>
            <value>
                <fullName>Import Tool Upload</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Remittance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>