force-app/main/default/objects/WorkOrderLineItem/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <label>Reason Description</label>
    <type>TextArea</type>
</CustomField>