force-app/main/default/objects/WorkOrderLineItem/fields/Reported_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reported_Quantity__c</fullName>
    <label>Reported Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>