force-app/main/default/objects/WorkOrderLineItem/fields/SBID_text__c.field-meta.xml
<CustomField>
    <fullName>SBID_text__c</fullName>
    <description>SBID formatted as text</description>
    <formula>Asset.SBID_text_c__c</formula>
    <label>SBID text</label>
    <type>Text</type>
</CustomField>