force-app/main/default/objects/WorkOrderLineItem/fields/SCOD_text__c.field-meta.xml
<CustomField>
    <fullName>SCOD_text__c</fullName>
    <description>Formula field to convert Asset&apos;s SCOD to text</description>
    <formula>TEXT( Asset.Acorn_SCOD__c )</formula>
    <label>SCOD text</label>
    <type>Text</type>
</CustomField>