force-app/main/default/objects/WorkOrderLineItem/fields/Service_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Service_Quantity__c</fullName>
    <label>Original W/O Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>