force-app/main/default/objects/WorkOrderLineItem/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>Asset.Service_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>