force-app/main/default/objects/WorkOrderLineItem/fields/Tonnage_Date__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_Date__c</fullName>
    <description>The date on which Work Order tonnage was accepted*</description>
    <label>Tonnage Date</label>
    <type>Date</type>
</CustomField>