force-app/main/default/objects/WorkOrderLineItem/fields/Tonnage_User__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who accepted the tonnage date*</description>
    <label>Tonnage User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>