force-app/main/default/objects/WorkOrderLineItem/fields/Tons__c.field-meta.xml
<CustomField>
    <fullName>Tons__c</fullName>
    <label>Tons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>