force-app/main/default/objects/WorkOrderLineItem/fields/Vendor_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>WorkOderLineItems_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>