force-app/main/default/objects/WorkOrderLineItem/validationRules/Client_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Price_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),ISCHANGED(New_Client_Price__c), NOT(ISPICKVAL(WorkOrder.Status, &apos;Pending/Draft&apos;)), NOT(ISPICKVAL(WorkOrder.Status, &apos;Issued&apos;)), NOT(ISPICKVAL(WorkOrder.Status, &apos;Sent&apos;)))</errorConditionFormula>
    <errorMessage>You can update client price only when WO is in Pending/Draft or Issued or Sent</errorMessage>
</ValidationRule>