force-app/main/default/objects/WorkOrderLineItem/validationRules/Quantity_Cannot_be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Cannot_be_Zero</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),ISCHANGED(Quantity__c), Quantity__c = 0)</errorConditionFormula>
    <errorMessage>Quantity cannot be zero</errorMessage>
</ValidationRule>