force-app/main/default/objects/WorkOrderLineItem/validationRules/Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),ISCHANGED(Quantity__c), 
NOT(ISPICKVAL(WorkOrder.Status, &apos;Pending/Draft&apos;)), NOT(ISPICKVAL(WorkOrder.Status, &apos;Issued&apos;)))</errorConditionFormula>
    <errorMessage>You can update quantity only when WO is in Pending/Draft or Issued</errorMessage>
</ValidationRule>