force-app/main/default/objects/WorkOrderLineItem/validationRules/Reason_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT($User.Bypass_Validation__c), 
ISPICKVAL(Reason_Code__c, &apos;OTHR&apos;),  ISBLANK(Reason_Description__c))</errorConditionFormula>
    <errorMessage>Reason Description is mandatory when you select Reason Code as Other</errorMessage>
</ValidationRule>